<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>
    <string name="loginTabTitle">Login</string>
    <string name="registerTabTitle">Register</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>
    <string name="sampleStatusText">Post content Mention: @thing</string>
    <string name="sampleStatusTIme">Sep 15 2020 10:49 PM</string>
    <string name="follow_button_text">Follow</string>
    <string name="nottwitter">NotTwitter</string>
    <string name="username">\@username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="take_a_profile_picture">Take a Profile Picture</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="title_activity_profile">Profile</string>
    <string name="register">Register</string>
    <string name="write_your_tweet_here">Write your Tweet Here</string>
    <string name="tweet">Tweet</string>
</resources>
