<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.main.following.FollowingFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp"/>

    <EditText
        android:id="@+id/registerfirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/registerlastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/registerusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        android:autofillHints="" />

    <EditText
        android:id="@+id/registerpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/take_a_profile_picture" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />


</LinearLayout>