<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/userImageTweet"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/userImageContentDescription" />

    <LinearLayout
        android:id="@+id/linearlayoutUserTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/userImageTweet">

        <TextView
            android:id="@+id/userNameTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/sampleUserName"/>

        <TextView
            android:id="@+id/userAliasTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampleAlias"/>

    </LinearLayout>
    <EditText
        android:id="@+id/tweetPopupEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/linearlayoutUserTweet"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/write_your_tweet_here" />

    <Button
        android:id="@+id/tweetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tweetPopupEditText"
        android:layout_alignEnd="@id/tweetPopupEditText"
        android:text="@string/tweet" />
</RelativeLayout>